--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,6 +2,9 @@ on: push
 jobs:
   changes:
     runs-on: ubuntu-latest
+    outputs:
+      a: ${{ steps.filter.outputs.a }}
+      b: ${{ steps.filter.outputs.b }}
     steps:
       - uses: actions/checkout@v4
       - uses: dorny/paths-filter@v3
