--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,7 +10,7 @@ jobs:
       - uses: dorny/paths-filter@v3
         id: filter
         with:
-          base: main
+          base: ${{ github.ref }}
           filters: |
             a:
               - 'a/**'
