--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,26 +10,22 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-      - name: Determine base and ref for paths-filter
-        id: commits
+      - name: Get base commit
+        id: base
         run: |
-          branch="${{ github.event.deployment.ref }}"
-          deployed_sha="${{ github.event.deployment.sha }}"
-          if [ "$branch" = "main" ]; then
-            base=$(git rev-parse "${deployed_sha}^")
-            ref="$deployed_sha"
+          if [ "${GITHUB_REF##*/}" = "main" ]; then
+            BASE=$(git rev-parse HEAD^)
           else
-            base=$(git merge-base origin/main "$deployed_sha")
-            ref="$deployed_sha"
+            git fetch origin main
+            BASE=$(git merge-base HEAD origin/main)
           fi
-          echo "base=$base" >> $GITHUB_OUTPUT
-          echo "ref=$ref" >> $GITHUB_OUTPUT
+          echo "base_commit=$BASE" >> $GITHUB_OUTPUT
       - name: Paths Filter (dorny/paths-filter)
         id: filter
         uses: dorny/paths-filter@v3
         with:
-          base: ${{ steps.commits.outputs.base }}
-          ref: ${{ steps.commits.outputs.ref }}
+          base: ${{ steps.base.outputs.base_commit }}
+          ref: ${{ github.sha }}
           filters: |
             a:
               - 'a/**'
