--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,7 +14,7 @@ jobs:
         id: base
         run: |
           if [ "${GITHUB_REF##*/}" = "main" ]; then
-            BASE=$(git rev-parse HEAD^)
+            BASE=$(git rev-parse HEAD~1)
           else
             git fetch origin main
             BASE=$(git merge-base HEAD origin/main)
